recipe app completed

--- a/src/Components/innerContainer.module.css
+++ b/src/Components/innerContainer.module.css
@@ -1,5 +1,5 @@
 .innercontainer{
-    background-color: aqua;
+    background-color: rgb(255, 255, 255);
     flex:1;
     padding: 10px;
     margin: 10px;
