--- a/src/Components/fooditem.module.css
+++ b/src/Components/fooditem.module.css
@@ -1,5 +1,5 @@
 .itemContainer{
-    width:300px;
+    width:600px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgb(0, 0,0, 0.1);
     margin: 20px;
@@ -8,6 +8,9 @@
 .itemImage{
     max-width:100%;
     height: auto;
+     border-radius: 8px;
+     margin-left: 100px;
+     
 }
 .itemContent{
     font-family: Arial, Helvetica, sans-serif;
@@ -28,8 +31,11 @@
     font-weight:600;
     cursor: pointer;
     border-radius: 5px;
+    margin-left: 180px;
+  
 
 }
 .buttonContainer{
+   
     
 }
