--- a/src/Components/nav.module.css
+++ b/src/Components/nav.module.css
@@ -2,7 +2,8 @@
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color:#393e46;
+    color:#000207;
     padding :30px;
     box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.5);
+    background-color: rgb(245, 224, 33);
 }
